[package]
name = "cabbage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { version = "0.3.31", features = ["sink"] }
log = { workspace = true }
rand = { workspace = true }
redis-protocol = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { workspace = true }
uuid = { workspace = true }
