[package]
name = "cabbage"
version = "0.1.0"
edition = "2024"
authors = ["Alex Kesling <alex@kesling.co>", "Kyle Beserra <kylebeserra@gmail.com>"]
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
redis-protocol = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
